--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,9 @@ Title: This package provides tools to convert files to and from IDX format to ar
 Version: 1.0
 Date: 2018-02-10
 Author: Erik Doffagne
-Maintainer: erik.doffagne@gmail.com
-Description: This package provides tools to convert files to and from IDX format to arrays in R
-License: MIT
+Maintainer: Erik Doffagne <erik.doffagne@gmail.com> 
+Description: This package provides funtions to convert files to 
+              and from IDX format to arrays in R.
+License: MIT + file LICENSE
+Suggests: testthat
+RoxygenNote: 6.0.1
