--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: idx2r
 Type: Package
-Title: This package provides tools to convert files to and from IDX format to arrays in R
+Title: This Package Provides Functions to Convert Files to and from IDX format to Arrays in R
 Version: 1.0
 Date: 2018-02-10
 Author: Erik Doffagne
 Maintainer: Erik Doffagne <erik.doffagne@gmail.com> 
-Description: This package provides funtions to convert files to 
+Description: This package provides functions to convert files to 
               and from IDX format to arrays in R.
 License: MIT + file LICENSE
 Suggests: testthat
