--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 1.0.0
 Date: 2018-02-18
 Author: Erik Doffagne
 Maintainer: Erik Doffagne <erik.doffagne@gmail.com> 
-Description: Convert Files to and from IDX format to vectors, matrices and arrays in R.
+Description: Convert files to and from IDX format to vectors, matrices and arrays in R.
     The file format is described on the website from Yann LeCun <http://yann.lecun.com/exdb/mnist/>.
 License: MIT + file LICENSE
 Suggests: testthat
